--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,9 +1,10 @@
 .body {
-    padding: 0;
+    padding:0;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 100vh;
     background: #ecf0f3;
 }
@@ -78,4 +79,8 @@
 #CE {
     background: #33cc33;
     color: #fff;
+}
+
+.byme {
+    margin-top: 10px;
 }
