--- a/src/components/style.css
+++ b/src/components/style.css
@@ -11,7 +11,7 @@
 
 .container {
     width: 45%;
-    height: 50vh;
+    height: 50%;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 12px 12px 20px #cbced1,
@@ -83,4 +83,5 @@
 
 .byme {
     margin-top: 10px;
+    color:  #33ccff;
 }
